--- a/src/main/resources/templates/publish.html
+++ b/src/main/resources/templates/publish.html
@@ -27,6 +27,9 @@
                 <button type="submit" class="btn btn-default">搜索</button>
             </form>
             <ul class="nav navbar-nav navbar-right">
+                <li th:if="${session.user != null}">
+                    <a href="/publish">发布</a>
+                </li>
                 <li class="dropdown" th:if="${session.user != null}">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
                        aria-expanded="false" th:text="${session.user.getName()}"><span class="caret"></span></a>
@@ -48,29 +51,39 @@
         <div class="col-lg-9 col-md-12 col-sm-12 col-xs-12">
             <h2><span class="glyphicon glyphicon-plus" aria-hidden="true"></span>发起</h2>
             <hr/>
-            <form action="">
+            <form action="/publish" method="post">
                 <div class="form-group">
                     <label for="title">问题标题，简明扼要</label>
-                    <input type="text" class="form-control" id="title" name="title" placeholder="输入标题">
+                    <input type="text" class="form-control" id="title" name="title" th:value="${title}"
+                           placeholder="输入标题">
                 </div>
                 <div class="form-group">
                     <label for="description">问题补充</label>
-                    <textarea id="description" name="description" class="form-control" cols="30"
+                    <textarea id="description" name="description" th:text="${description}" class="form-control"
+                              cols="30"
                               rows="10"></textarea>
                 </div>
                 <div class="form-group">
                     <label for="tag">添加标签</label>
-                    <input type="text" class="form-control" id="tag" name="tag" placeholder="输入标签，多个标签以','隔开">
+                    <input type="text" class="form-control" id="tag" name="tag" th:value="${tag}"
+                           placeholder="输入标签，多个标签以','隔开">
                 </div>
-                <button type="submit" class="btn btn-success btn-publish">发布</button>
+                <div class="container-fluid main">
+                    <div class="row">
+                        <div class="alert alert-danger col-lg-9 col-md-12 col-sm-12 col-xs-12" th:text="${error}" th:if="${error != null}"></div>
+                        <div class="col-lg-3 col-md-12 col-sm-12 col-xs-12">
+                            <button type="submit" class="btn btn-success btn-publish">发布</button>
+                        </div>
+                    </div>
+                </div>
             </form>
         </div>
         <div class="col-lg-3 col-md-12 col-sm-12 col-xs-12">
             <h3>问题发起指南</h3>
             <ul>
-                <li>test test test</li>
-                <li>test test test</li>
-                <li>test test test</li>
+                <li>问题标题: 请用精简的语言描述您发布的问题，不超过25字</li>
+                <li>问题补充: 详细补充您的问题内容，并确保问题描述清晰直观, 并提供一些相关的资料</li>
+                <li>选择标签: 选择一个或者多个合适的标签，用逗号隔开，每个标签不超过10个字</li>
             </ul>
         </div>
     </div>
