--- a/src/main/resources/templates/publish.html
+++ b/src/main/resources/templates/publish.html
@@ -3,11 +3,11 @@
 <head>
     <title>发布 - 码匠笔记</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/bootstrap-theme.min.css">
-    <link rel="stylesheet" href="css/community-publish.css">
-    <script src="js/jquery-3.4.1.min.js"></script>
-    <script src="js/bootstrap.min.js" type="application/javascript"></script>
+    <link rel="stylesheet" href="/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/css/bootstrap-theme.min.css">
+    <link rel="stylesheet" href="/css/community-publish.css">
+    <script src="/js/jquery-3.4.1.min.js"></script>
+    <script src="/js/bootstrap.min.js" type="application/javascript"></script>
 </head>
 <body>
 <div th:insert="~{navigation :: nav}"></div>
@@ -17,6 +17,7 @@
             <h2><span class="glyphicon glyphicon-plus" aria-hidden="true"></span>发起</h2>
             <hr/>
             <form action="/publish" method="post">
+                <input type="hidden" name="id" th:value="${id}">
                 <div class="form-group">
                     <label for="title">问题标题，简明扼要</label>
                     <input type="text" class="form-control" id="title" name="title" th:value="${title}"
@@ -25,8 +26,8 @@
                 <div class="form-group">
                     <label for="description">问题补充</label>
                     <textarea id="description" name="description" th:text="${description}" class="form-control"
-                              cols="30"
-                              rows="10"></textarea>
+                              cols="30" rows="10">
+                    </textarea>
                 </div>
                 <div class="form-group">
                     <label for="tag">添加标签</label>
